SA013 - WebService para exportação de Exames (Sistema A)

--- a/sistemaA/src/main/webapp/WEB-INF/web.xml
+++ b/sistemaA/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,24 @@
 
   <display-name>sistemaA</display-name>
   
+  <!-- Auto scan REST service -->
+	<context-param>
+		<param-name>resteasy.scan</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	
+	<!-- this need same with resteasy servlet url-pattern -->
+	<context-param>
+		<param-name>resteasy.servlet.mapping.prefix</param-name>
+		<param-value>/rest</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>
+			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+		</listener-class>
+	</listener>
+  
   <!-- Servlet's -->
   
   <servlet>
@@ -17,6 +35,18 @@
   	<servlet-name>jsf</servlet-name>
   	<url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<servlet-class>
+			org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
+		</servlet-class>
+	</servlet>
+     
+	<servlet-mapping>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>	
   
   <!-- Welcome File -->
   
